<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Github User\'s Search</string>
    <string name="app_detail">Detail User</string>
    <string name="profile">Profile</string>
    <string name="username_user">Username</string>
    <string name="name_user">Name User</string>
    <string name="location_user">Location User</string>
    <string name="repository_user">Repository User</string>
    <string name="company_user">Company User</string>
    <string name="followers_user">Followers User</string>
    <string name="following_user">Following User</string>
    <string name="location">Location:</string>
    <string name="repository">Repository:</string>
    <string name="company">Company:</string>
    <string name="followers">Followers:</string>
    <string name="following">Following:</string>
    <string name="change_language_settings">Change Language</string>
    <string name="search">Search</string>
    <string name="search_hint">Enter Username</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="titlebar">Detail User - %s</string>
</resources>